feat(auth): implement login logic with authentication

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -24,15 +24,17 @@
             <div class=" mb-5 contact-us" style="">
                 <div class="contact-form bg-light p-30">
                     <div id="success"></div>
-                    <form name="userLogin" id="loginForm" novalidate="novalidate">
+                    <form method="post">
+                        {% csrf_token %}
                         <div class="control-group">
-                            <input type="text" class="form-control" id="phone" placeholder="Your Phone"
-                                required="required" data-validation-required-message="Please enter your phon number" />
+                            {{ form.phone }}
+                            {% for error in form.phone.errors %}
+                                <p class="alert alert-danger">{{ error }}</p>
+                            {% endfor %}
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="control-group">
-                            <input type="password" class="form-control" id="password" placeholder="Your Password"
-                                required="required" data-validation-required-message="Please enter your password" />
+                            {{ form.password }}
                             <p class="help-block text-danger"></p>
                         </div>
                         <div>
