feat(products): add cache

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block main %}
+    {% comment %} <h1>Garsivaz Test</h1> {% endcomment %}
     <!-- Carousel Start -->
     <div class="container-fluid mb-3">
         <div class="row px-xl-5">
